# CMakeExample

./: .gitignore  CMakeLists.txt
src/: main.c  main.h
